syntax = 'proto3';

package astria.execution.v1alpha1;

import "google/protobuf/timestamp.proto";

message DoBlockRequest {
  bytes prev_block_hash = 1;
  repeated bytes transactions = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DoBlockResponse {
  bytes block_hash2 = 1;
}

message FinalizeBlockRequest {
  bytes block_hash = 1;
}

message FinalizeBlockResponse {}

message InitStateRequest{}

message InitStateResponse {
  bytes block_hash = 1;
}

service ExecutionService {
  rpc InitState(InitStateRequest) returns (InitStateResponse);
  rpc DoBlock(DoBlockRequest) returns (DoBlockResponse);
  rpc FinalizeBlock(FinalizeBlockRequest) returns (FinalizeBlockResponse);
}
